--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
     <header>
         <h1>LLM2Fx: Can Large Language Models Predict Audio Effects Parameters from Natural Language?</h1>
         <div class="authors">
-            <p>A framework leveraging Large Language Models (LLMs) to predict Fx parameters directly from textual
-                descriptions</p>
+            <p>A framework leveraging Large Language Models (LLMs) to predict Fx parameters directly from text</p>
         </div>
         <div class="links">
             <a href="#" target="_blank" class="paper-link" style="margin: 0 5px">📄 Paper</a>
             <a href="https://github.com/SonyResearch/LLM2Fx" target="_blank" class="code-link" style="margin: 0 5px">💻
                 Code</a>
             <a href="https://huggingface.co/collections/seungheondoh/llm2fx-6821b961b982fe1eab1b00bf" target="_blank"
-                class="demo-link" style="margin: 0 5px">🤗 Demo</a>
+                class="dataset-link" style="margin: 0 5px">🤗 Dataset</a>
         </div>
+        <img src="static/img/front.png" alt="LLM2Fx Framework Overview"
+            style="width: 100%; margin: 20px 0; display: block; margin-left: auto; margin-right: auto;">
+
     </header>
 
     <section class="abstract">
